# freerad_api

./: .gitignore  DASHBOARD_GUIDE.md  Dockerfile  PERFORMANCE_OPTIMIZATION.md  README.md  config.py  crud.py  decorators.py  dependencies.py  docker-compose.yaml  fix_hostid_script.py  fix_vlan_script.py  grafana-dashboard-optimized.json  grafana-dashboard-original.json  grafana-dashboard.json  logging_config.py  logging_setup.py  loki-config.yaml  main.py  metrics.py  middleware.py  performance_test.py  performance_test_results_20250825_190130.json  promtail-config.yaml  pyproject.toml  rabbitmq_client.py  redis_client.py  schemas.py  services.py  test.txt  test_dependencies.py  test_find_sessions.py  utils.py  vlan_scan_results.json
middleware/: base.py  metrics.py
src/: main.py
src/radius_core/: __init__.py
src/radius_core/api/: __init__.py  endpoints.py  login_analyzer.py
src/radius_core/clients/: __init__.py  kafka_client.py  rabbitmq_client.py  redis_client.py
src/radius_core/config/: __init__.py  settings.py
src/radius_core/core/: __init__.py  app_factory.py  app_lifecycle.py  dependencies.py  logging_config.py  metrics.py  performance_optimizations.py
src/radius_core/models/: __init__.py  schemas.py
src/radius_core/services/: __init__.py
src/radius_core/services/accounting/: __init__.py  accounting_operations.py
src/radius_core/services/auth/: __init__.py  auth_operations.py  duplicate_session_handler.py
src/radius_core/utils/: __init__.py  data_prepare.py  helpers.py  service_intervals.py
tests/: test_find_sessions.py
(+14 files in other folders)
