[project]
name = "radius-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.5",
    "fastapi>=0.116.1",
    "pydantic>=2.8.0",
    "python-dateutil>=2.9.0.post0",
    "redis>=5.0.7",
    "uvicorn>=0.35.0",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "prometheus-client>=0.20.0",
    "python-dotenv>=1.1.1",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "gunicorn>=23.0.0",
    "tqdm>=4.67.1",
]
